--- a/main.yaml
+++ b/main.yaml
@@ -4,5 +4,6 @@
   become: true
   tasks:
     - name: main
-      import_tasks: tasks/update.yaml
-      import_tasks: tasks/docker.yaml
+      import_tasks: 
+        - tasks/update.yaml
+        - tasks/docker.io
