--- a/main.yaml
+++ b/main.yaml
@@ -3,7 +3,5 @@
   hosts: all
   become: true
   tasks:
-    - name: main
-      import_tasks: 
-        - tasks/update.yaml
-        - tasks/docker.io
+    - import_tasks: tasks/update.yaml
+    - import_tasks: tasks/docker.io
