--- a/main.yaml
+++ b/main.yaml
@@ -4,4 +4,4 @@
   become: true
   tasks:
     - import_tasks: tasks/update.yaml
-    - import_tasks: tasks/docker.io
+    - import_tasks: tasks/docker.yaml
