--- a/main.yaml
+++ b/main.yaml
@@ -6,12 +6,28 @@
     - import_tasks: tasks/update.yaml
     - import_tasks: tasks/docker.yaml
 
-- name: k3s
+- name: k3s(master)
   hosts: master
   tasks:
     - name: install k3s on master node
       shell: |
          curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE="644" sh -s
       become: true
+
+    - name: copying node token
+      shell: cat /var/lib/rancher/k3s/server/node-token
+      register: k3s_token
+      become: true
+
+
+- name: k3s(worker)
+  hosts: worker
+  tasks:
+    - name: joining and installing
+      shell: |
+          curl -sfL https://get.k3s.io | K3S_URL=https://{{ host_ip }}:6443 K3S_TOKEN={{ k3s_token.stdout }} sh - 
+      become: true
+    
+
 
     
