--- a/main.yaml
+++ b/main.yaml
@@ -14,6 +14,11 @@
          curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE="644" sh -s
       become: true
 
+    - name: copying config file to home directory
+      copy:
+        src: /etc/rancher/k3s/k3s.yaml
+        dest: ~/.kube/config
+
     - name: copying node token
       shell: cat /var/lib/rancher/k3s/server/node-token
       register: k3s_token
