--- a/main.yaml
+++ b/main.yaml
@@ -30,12 +30,10 @@
 
 - name: k3s(worker)
   hosts: worker
-  vars_files:
-    - vars.yaml
   tasks:
     - name: joining and installing
       shell: |
-          curl -sfL https://get.k3s.io | K3S_URL=https://51.120.118.95:6443 K3S_TOKEN={{ hostvars['51.120.118.95'].k3s_token.stdout }} sh - 
+          curl -sfL https://get.k3s.io | K3S_URL=https://{{ hostvars[inventory_hostname].variable }}:6443 K3S_TOKEN={{ hostvars['51.120.118.95'].k3s_token.stdout }} sh - 
       become: true
     
 
